--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-DB_HOST = 'sua_host'
-DB_USER = 'seu_usuario'
-DB_PASSWORD = 'sua_senha'
-DB_NAME = 'seu_banco_dados'
-DB_PORT = 1234
+DB_HOST = 'localhost'
+DB_USER = 'root'
+DB_PASSWORD = 'math4808'
+DB_NAME = 'crediario'
+DB_PORT = 3306
 
-PORT = 1235 // Porta do servidor backend
+PORT = 5000
